--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -13,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chat-app": "file:..",
+    "kill-port": "^2.0.1",
     "lucide-react": "^0.459.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
